updated project page and fixed overflow

--- a/base-style.css
+++ b/base-style.css
@@ -24,11 +24,12 @@
 
 body {
   margin: 0;
-  min-height: 100vh;
+  height: 100vh;
   display: grid;
   background-color: var(--bg-color-one);
   grid-template-rows: auto 1fr auto;
   color: var(--text-color-one);
+  overflow: hidden;
 }
 
 .header,
